Bug 474489: [Composite Structure] Infinite loop while using canonical mode https://bugs.eclipse.org/bugs/show_bug.cgi?id=474489
Add a canonical strategy for structured classifiers in composite
diagrams that presents only ports and parts as canonical children
(connectors handled separately, not requiring any change).

(cherry-picked from master 9c5bdceb6b4fd22de8d3d1b060a892abe1881f24)